# acdh-tei-pyutils

./: .cookietemple.yml  .flake8  .gitignore  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  attributes.sh  cookietemple.cfg  denormalize.sh  index.html  main.py  objects.inv  out.xml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build_package.yml  docs.yml  lint.yml  publish_package.yml  pypi.yml  run_codecov.yml  run_tox_testsuite.yml  test.yml
acdh_tei_pyutils/: __init__.py  cli.py  tei.py  utils.py
acdh_tei_pyutils/files/: clean_markup.xsl  tei.xml  tei_no_id.xml  tei_trailing_slash.xml
docs/: Makefile  acdh_tei_pyutils.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  reference.md  usage.rst
makefiles/: Linux.mk  Windows.mk
reference/: index.html
src/acdh_tei_pyutils/: __init__.py  cli.py  utils.py
src/acdh_tei_pyutils/files/: tei.xml  tei_no_id.xml  tei_no_ids.xml
tests/: __init__.py  listbibl_test.xml  test_cli.py  test_tei.py  test_utils.py
